<resources>
  <string name="app_name">WorkReport</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="id">ID</string>
  <string name="password">Password</string>
  <string name="validate_all_empty">all empty</string>
  <string name="validate_pass_short_or_long">pass too short or too long</string>
  <string name="validate_id_short_or_long">username too short or too long</string>
  <string name="validate_no_digits">no digits found</string>
  <string name="validate_no_lowercase">no lowercase letters found</string>
  <string name="validate_no_special_chars">no special chars found</string>
  <string name="validate_pass_contains_id">pass contains substring of username</string>
  <string name="settings">설정</string>
  <string name="statistics">통계</string>

  <string name="review">리뷰(문의/제안/요청)</string>
  <string name="classification_code">분류코드</string>
  <string name="what_did_you_do_today">무슨 업무 하셨어요?</string>
  <string name="project">프로젝트</string>
  <string name="project_wip">진행중인 프로젝트</string>
  <string name="change_pw">비밀번호 변경</string>
  <string name="now_password">현재 비밀번호</string>
  <string name="new_password">새로운 비밀번호</string>
  <string name="new_password_confirm">새로운 비밀번호 확인</string>
  <string name="input_invalid_value">입력 값이 이상해요.</string>
  <string name="operation_ratio">가동률</string>
  <string name="graph">그래프</string>
  <string name="total">집계</string>
  <string name="team_members">팀원 업무보고(팀 구성원)</string>
  <string name="save">저장</string>
  <string name="save_completed">저장되었습니다.</string>
  <string name="empty_text"/>
  <string name="login">로그인</string>
  <string name="technology_research_center">기술연구소</string>
  <string name="profits">Profits</string>
  <string name="invest">Invest</string>
  <string name="loss">Loss</string>
  <string name="support">Support</string>
  <string name="educate_proposal"><![CDATA[Educate & Proposal]]></string>
  <string name="vacation_etc"><![CDATA[Vacation & Etc]]></string>
  <string name="sum">계</string>
  <string name="login_complete">로그인 성공</string>
  <string name="operation_ration_table">가동률 표</string>
  <string name="january">1월</string>
  <string name="february">2월</string>
  <string name="march">3월</string>
  <string name="april">4월</string>
  <string name="may">5월</string>
  <string name="june">6월</string>
  <string name="july">7월</string>
  <string name="august">8월</string>
  <string name="september">9월</string>
  <string name="october">10월</string>
  <string name="november">11월</string>
  <string name="december">12월</string>
  <string name="now">현재</string>
  <string name="year">연간</string>
  <string name="monthly">월별</string>
  <string name="month">월</string>
  <string name="coming_soon">commin soon...</string>
  <string name="please_enter_all">모두 입력해 주세요.</string>
  <string name="members">팀원별</string>
  <string name="division">구분</string>
  <string name="year_op_ratio">연간 가동률</string>
  <string name="now_op_ratio">현재 가동률</string>
  <string name="op_ratio_detail_view">가동률 상세보기</string>
  <string name="analytics">분석</string>
  <string name="holiday">휴일</string>
  <string name="holiday_add">휴일 추가</string>
  <string name="create_year_db">연(년) DB 생성</string>
  <string name="create">생성</string>
  <string name="complete">완료</string>
  <string name="drawer_statistics">통계</string>
  <string name="drawer_team_report">팀원 업무보고</string>
  <string name="drawer_proj_manage">프로젝트 관리</string>
  <string name="drawer_change_pw">비밀번호 변경</string>
  <string name="proj_manage">프로젝트 관리</string>
  <string name="project_list">프로젝트 리스트</string>
  <string name="employee_list">투입인원 리스트</string>
  <string name="add_project">프로젝트 추가</string>
  <string name="edit_project">프로젝트 수정 및 삭제</string>
  <string name="update">수정</string>
  <string name="del">삭제</string>
  <string name="project_code">프로젝트 코드</string>
  <string name="project_name">프로젝트명</string>
  <string name="start_date">시작일</string>
  <string name="end_date">종료일</string>
  <string name="dept_code">부서코드</string>
  <string name="emp_code">투입형태</string>
  <string name="add_emp">투입인원 추가</string>
  <string name="emp_name">투입원</string>
  <string name="edit_emp">투입인원 수정</string>
  <string name="day_of_week">요일</string>
  <string name="legal_holiday">토,일을 제외한 공휴일</string>
  <string name="date">날짜</string>
  <string name="holiday_edit">휴일 수정</string>
  <string name="holiday_list">휴일 목록</string>
</resources>
