<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@id/item_container"
    >
  <TextView
      android:id="@id/name_textview"
      android:layout_width="0dp"
      android:layout_height="@dimen/dp_40"
      android:layout_weight="1.2"
      android:background="@color/colorIndigo_200"
      android:gravity="center"
      android:text="@string/division"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      />
  <TextView
      android:id="@id/jan_textview"
      android:text="@string/january"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/feb_textview"
      android:text="@string/february"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/mar_textview"
      android:text="@string/march"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/apr_textview"
      android:text="@string/april"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/may_textview"
      android:text="@string/may"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/jun_textview"
      tools:text="@string/june"
      android:text="@string/june"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/jul_textview"
      android:text="@string/july"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/aug_textview"
      android:text="@string/august"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/sep_textview"
      android:text="@string/september"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/oct_textview"
      android:text="@string/october"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/nov_textview"
      android:text="@string/november"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/dec_textview"
      android:text="@string/december"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/now_op_ratio_textview"
      android:text="@string/now"
      style="@style/OpDetailItemSubjectTextView"
      />
  <TextView
      android:id="@id/year_op_ratio_textview"
      android:text="@string/year"
      style="@style/OpDetailItemSubjectTextView"
      />

</LinearLayout>