<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="none">
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_chart"
        android:title="@string/drawer_statistics"/>
    <item
        android:id="@+id/nav_team_report"
        android:icon="@drawable/ic_group"
        android:title="@string/drawer_team_report"/>
    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_build"
        android:title="@string/drawer_proj_employee"/>
    <item
        android:id="@+id/nav_password"
        android:icon="@drawable/ic_settings"
        android:title="@string/drawer_change_pw"/>
  </group>

  <item android:title="Communicate">
    <menu>
      <item
          android:id="@+id/nav_review"
          android:icon="@drawable/ic_edit"
          android:title="@string/review"/>
    </menu>
  </item>

</menu>