<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="@dimen/dp_10"
      android:layout_marginRight="@dimen/dp_10"
      android:orientation="vertical"
      >
    <EditText
        android:id="@id/user_name_edittext"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/project_code"
        android:inputType="number"
        style="@style/AddProjectEditText"
        />
    <EditText
        android:id="@id/proj_name_edittext"
        android:drawableLeft="@drawable/ic_whatshot"
        android:hint="@string/project_name"
        android:inputType="text"
        style="@style/AddProjectEditText"
        />
    <EditText
        android:id="@id/start_date_edittext"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_flight_takeoff"
        android:focusable="false"
        android:hint="@string/start_date"
        android:inputType="date"
        style="@style/AddProjectEditText"
        />
    <EditText
        android:id="@id/end_date_edittext"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_flight_land"
        android:focusable="false"
        android:hint="@string/end_date"
        android:inputType="date"
        style="@style/AddProjectEditText"
        />
    <EditText
        android:id="@id/emp_type_edittext"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_label_outline"
        android:focusable="false"
        android:hint="@string/emp_code"
        android:inputType="text"
        style="@style/AddProjectEditText"
        />
  </LinearLayout>

</FrameLayout>