<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@id/id_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_50"
        >
      <android.support.design.widget.TextInputEditText
          android:id="@id/id_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/id"
          android:imeOptions="actionNext"
          android:inputType="textAutoComplete"
          android:maxLines="1"
          android:importantForAutofill="noExcludeDescendants"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@id/pw_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_50"
        app:passwordToggleEnabled="true"
        >
      <android.support.design.widget.TextInputEditText
          android:id="@id/pw_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableLeft="@drawable/ic_lock"
          android:hint="@string/password"
          android:imeOptions="actionSend"
          android:inputType="textPassword"
          android:maxLines="1"
          android:importantForAutofill="noExcludeDescendants"
          />
    </android.support.design.widget.TextInputLayout>
  </LinearLayout>
  <ProgressBar
      android:id="@id/progress_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:visibility="gone"
      />

</FrameLayout>